--- a/home.html
+++ b/home.html
@@ -53,9 +53,10 @@
         <h1>FROZEN</h1>
         <h2>Bar</h2>
         <p>
-          <h3>Welcome to the Magical World of FROZEN Bar ICE-CREAM <br />
+          <h3>Welcome to the Magical World of FROZEN Bar ICE-CREAM Shop<br />
 
          Daily 9 AM - 8 PM</h3>
+         
         </p>
         <a href="#">Order now</a>
         <a href="price.html" class="ctaa"><i class="ri-play-fill"></i>Check Flavours</a>
