--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
         <h1>FROZEN</h1>
         <h2>Bar</h2>
         <p>
-          <h3>Welcome to the Magical World of FROZEN Bar ICE-CREAM Shop<br />
+          <h3>Welcome to the Magical World of FROZEN Bar ICE-CREAM<br />
 
          Daily 9 AM - 8 PM</h3>
          
